--- a/resume.html
+++ b/resume.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ishwari Thete</title>
+    <title>Ishwari</title>
     
 </head>
 <body>
 
-    <h1>Yash Chandulal Parashar</h1>
+    <h1>Ishwari Sharad Thete</h1>
     <hr>
 
     <!-- Education -->
